@@ -242,6 +242,8 @@ class TaskRefinerBase (object):
             self.setSplitRule(None,1,JediTaskSpec.splitRuleToken['failGoalUnreached'])
         if 'switchEStoNormal' in taskParamMap:
             self.setSplitRule(None,1,JediTaskSpec.splitRuleToken['switchEStoNormal'])
+        if 'nEventsPerRange' in taskParamMap:
+            self.setSplitRule(None,1,JediTaskSpec.splitRuleToken['dynamicNumEvents'])
         # return
         return
     
